updated example urls

--- a/example/package.json
+++ b/example/package.json
@@ -17,5 +17,8 @@
   "optionalDependencies": {
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.3"
   }
 }
